--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'java-library'
-    id 'kotlin'
+    id 'com.android.library'
+    id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
 }
@@ -16,8 +16,13 @@ dependencies {
 
     implementation commonDependencies.kotlinStdLib
     implementation frameworkDependencies.roomRuntime
-    implementation frameworkDependencies.roomKtx
     kapt frameworkDependencies.roomCompiler
+    implementation frameworkDependencies.roomKtx
 
     implementation project(':core')
+}
+
+android {
+    compileSdkVersion androidCompileSdkVersion
+    buildToolsVersion androidBuildToolsVersion
 }
