Add content of week 12

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -37,6 +39,10 @@ android {
 
 dependencies {
 
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     def commonDependencies = rootProject.ext.common
     def applicationDependencies = rootProject.ext.mainApplication
     def testDependencies = rootProject.ext.unitTesting
@@ -45,6 +51,7 @@ dependencies {
     implementation commonDependencies.kotlinStdLib
     implementation applicationDependencies.appcompat
     implementation applicationDependencies.material
+    implementation applicationDependencies.glide
 
     implementation project(':core')
     implementation project(':framework')
